L3/S1/Info/Compil/TD2/mini-python/tests/good/range2.py
x = list(range(7))
print(x[0])
print(x[6])

